; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_biba/extr_mac_biba.c_biba_vnode_check_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_biba/extr_mac_biba.c_biba_vnode_check_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { %struct.label* }
%struct.vnode = type { i32 }
%struct.label = type { i32 }
%struct.mac_biba = type { i32 }

@biba_enabled = common dso_local global i32 0, align 4
@revocation_enabled = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucred*, %struct.ucred*, %struct.vnode*, %struct.label*)* @biba_vnode_check_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @biba_vnode_check_write(%struct.ucred* %0, %struct.ucred* %1, %struct.vnode* %2, %struct.label* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ucred*, align 8
  %7 = alloca %struct.ucred*, align 8
  %8 = alloca %struct.vnode*, align 8
  %9 = alloca %struct.label*, align 8
  %10 = alloca %struct.mac_biba*, align 8
  %11 = alloca %struct.mac_biba*, align 8
  store %struct.ucred* %0, %struct.ucred** %6, align 8
  store %struct.ucred* %1, %struct.ucred** %7, align 8
  store %struct.vnode* %2, %struct.vnode** %8, align 8
  store %struct.label* %3, %struct.label** %9, align 8
  %12 = load i32, i32* @biba_enabled, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i32, i32* @revocation_enabled, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %14, %4
  store i32 0, i32* %5, align 4
  br label %32

18:                                               ; preds = %14
  %19 = load %struct.ucred*, %struct.ucred** %6, align 8
  %20 = getelementptr inbounds %struct.ucred, %struct.ucred* %19, i32 0, i32 0
  %21 = load %struct.label*, %struct.label** %20, align 8
  %22 = call %struct.mac_biba* @SLOT(%struct.label* %21)
  store %struct.mac_biba* %22, %struct.mac_biba** %10, align 8
  %23 = load %struct.label*, %struct.label** %9, align 8
  %24 = call %struct.mac_biba* @SLOT(%struct.label* %23)
  store %struct.mac_biba* %24, %struct.mac_biba** %11, align 8
  %25 = load %struct.mac_biba*, %struct.mac_biba** %10, align 8
  %26 = load %struct.mac_biba*, %struct.mac_biba** %11, align 8
  %27 = call i32 @biba_dominate_effective(%struct.mac_biba* %25, %struct.mac_biba* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %31, label %29

29:                                               ; preds = %18
  %30 = load i32, i32* @EACCES, align 4
  store i32 %30, i32* %5, align 4
  br label %32

31:                                               ; preds = %18
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %31, %29, %17
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local %struct.mac_biba* @SLOT(%struct.label*) #1

declare dso_local i32 @biba_dominate_effective(%struct.mac_biba*, %struct.mac_biba*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
